--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Customizing Bootstrap Hello</title>
   <link rel="stylesheet" href="css/custom.css">
   <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body class="bg-light">
   <header>
@@ -51,7 +51,11 @@
             <h1 class="mb-3">Responsive heading for hero section</h1>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis lacus dui, dapibus in odio vel, tincidunt efficitur lacus. Aliquam vitae sem sed quam faucibus tincidunt vel eget tellus. Ut pulvinar a ex a condimentum. Nam est quam, sollicitudin tempor congue eu, convallis at nisi. </p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
+
+              <!-- For this primary CTA button, I used the "animate__pulse" to help the button stand out to the user. This will in turn improve conversion rates by encouraging users to click on this CTA button. I also used "animate__infinite" to keep the animation going indefinetly, and used "animate__slow" to make the animation less distracting, and more subtle to the user so they don't have a hard time reading the hero section paragraph. -->
+              <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 animate__animated animate__pulse animate__infinite animate__slow">Primary</button>
+
+
               <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
             </div>
           </div>
