--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
             </li>
           </ul>
 
+          <!-- For this Sign-Up button in the nav bar, I used "animate__swing" to catch the users attention and make them more likely to click the button and sign up. I also used "animate__slower" and "animate__repeat-3	3" to make sure it isn't taking the users attention away from the main content of the website.-->
           <div class="d-inline-flex flex-column flex-lg-row ms-auto">
             <button type="button" class="btn btn-sm btn-secondary mb-2 mb-lg-0 me-2">Login</button>
-            <button type="button" class="btn btn-sm btn-primary">Sign-up</button>
+            <button type="button" class="btn btn-sm btn-primary animate__animated animate__swing animate__slower animate__repeat-3	3">Sign-up</button>
           </div>
         </div> 
       </div>
@@ -52,7 +53,7 @@
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis lacus dui, dapibus in odio vel, tincidunt efficitur lacus. Aliquam vitae sem sed quam faucibus tincidunt vel eget tellus. Ut pulvinar a ex a condimentum. Nam est quam, sollicitudin tempor congue eu, convallis at nisi. </p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
 
-              <!-- For this primary CTA button, I used the "animate__pulse" to help the button stand out to the user. This will in turn improve conversion rates by encouraging users to click on this CTA button. I also used "animate__infinite" to keep the animation going indefinetly, and used "animate__slow" to make the animation less distracting, and more subtle to the user so they don't have a hard time reading the hero section paragraph. -->
+              <!-- For this primary CTA button, I used the "animate__pulse" to help the button stand out to the user. This will in turn improve conversion rates by encouraging users to click on this CTA button. I also used "animate__infinite" to keep the animation going indefinitely, and used "animate__slow" to make the animation less distracting, and more subtle to the user so they don't have a hard time reading the hero section paragraph. -->
               <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 animate__animated animate__pulse animate__infinite animate__slow">Primary</button>
 
 
@@ -64,7 +65,9 @@
     </section>
 
     <section class="bg-dark text-light py-5">
-      <div class="container px-4">
+
+      <!-- For this div containing the theme colours section, I chose to use the "animate__slideInLeft" to catch the users attention, encouraging them to keep scrolling down the page to see more. This will help conversion rates by retaining the users attention for longer and keeping them scrolling for longer as well. -->
+      <div class="container px-4 animate__animated animate__slideInLeft">
         <h2 class="pb-2 border-bottom">Theme colors</h2>
         <div class="row g-4 py-3 row-cols-1 row-cols-lg-3">
           <div class="col d-flex align-items-start mb-3">
